# aruco_markers_detect

./: CMakeLists.txt  README.md  aruco_marker_nodelet.xml  package.xml
config/: aruco_markers_detect_config.yaml  aruco_single_detect_config.yaml  auto-del-log.sh
config/camera_params/: hikcam0.yaml  hikcam1.yaml  hikcam2.yaml
config/map/: markers_map_depu_gfloor.yaml  markers_map_depu_sfloor.yaml  markers_map_hn.yaml  markers_map_hnuo.yaml  zhenjiang_M2.yaml  zhenjiang_M2.yaml.backup
config/map/archives/: 20201214.yml  Configuration_meter.yml  aruco_calibration_grid_board_a4_meters.yml  depu_grandhall_20210222_1.yml  depu_grandhall_20210222_2.yml  depu_grandhall_20210222_3.yml  depu_grandhall_20210222_4.yml  grandhall_4405.yml  grandhall_4405_1030.yml  grandhall_and_corridor.yml  grandhall_and_corridor_reduce.yml  grandhall_and_corridor_reduce_20201116.yml  grandhall_and_corridor_reduce_20201117.yml  grandhall_and_corridor_reduce_20201119.yml  grandhall_and_corridor_reduce_20201119_2.yml  grandhall_and_corridor_reduce_20201120.yml  grandhall_and_corridor_reduce_20201209.yml  grandhall_and_corridor_reduce_20201210.yml  grandhall_and_corridor_reduce_20201210_1.yml  grandhall_and_corridor_reduce_20210112.yml  grandhall_and_corridor_reduce_20210113.yml  markers_map_depu_gfloor.yaml  markers_map_depu_second_floor.yaml  meetingroom_map.yml  zhenjiang_M2.yaml.backup
config/markers_classify/: markers_classify.yaml  markers_classify.yaml.backup  markers_classify_depu_gfloor.yaml  markers_classify_depu_sfloor.yaml  markers_classify_hn.yaml  markers_classify_hnuo copy.yaml
doc/: map_builder.md
include/aruco_marker_map_build/: aruco_single_mark.hpp
include/aruco_markers/: aruco_markers.hpp  aruco_markers1.hpp  aruco_markers_nodelet.hpp
include/global_defination/: global_defination.h.in
launch/: aruco_markers_map_depu_sfloor.launch
src/apps/: aruco_markers_node.cpp  aruco_markers_nodelet.cpp  aruco_single_marker_node.cpp
src/aruco_mark_map_build/: aruco_single_mark.cpp
src/aruco_markers/: aruco_markers.cpp  aruco_markers_interface.cpp
