<?xml version="1.0"?>
<package>
  <name>aruco_markers_detect</name>
  <version>1.0.0</version>
  <description>aruco markers map builder tools</description>

  <maintainer email="pifan@todo.todo">pifan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>vison_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>nodelet</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
        <nodelet  plugin="${prefix}/aruco_marker_nodelet.xml" />
  </export>
</package>
